check all shard connections at once so we don't get cascading failure SERVER-1560